--- a/join-us/style.css
+++ b/join-us/style.css
@@ -223,6 +223,13 @@
   margin-bottom: 10px;
 }
 
+.cat-details.col-3.modal {
+  margin-left: -10px;
+  margin-top: 0;
+  margin-bottom: 0;
+  align-items: normal;
+}
+
 .cat-browse {
   width: auto;
   display: flex;
@@ -408,7 +415,10 @@
   margin: 0px auto 15px;
 }
 
-.tingle-modal h1.platinum {
+.platinum-label {
+  display: flex;
+  align-items: normal;
+  gap: 10px;
   transform: scaleX(109%) translate(0, -3rem);
   background-color: #002e67;
   color: #fff;
@@ -421,7 +431,10 @@
   margin: 0;
 }
 
-.tingle-modal h1.gold {
+.gold-label {
+  display: flex;
+  align-items: normal;
+  gap: 10px;
   transform: scaleX(109%) translate(0, -3rem);
   background-color: #eec64f;
   color: #000;
@@ -434,7 +447,10 @@
   margin: 0;
 }
 
-.tingle-modal h1.associate {
+.associate-label {
+  display: flex;
+  align-items: normal;
+  gap: 10px;
   transform: scaleX(109%) translate(0, -3rem);
   background-color: #5dc0cc;
   color: #000;
@@ -446,7 +462,10 @@
   margin: 0;
 }
 
-.tingle-modal h1.individual {
+.individual-label {
+  display: flex;
+  align-items: center;
+  gap: 10px;
   transform: scaleX(109%) translate(0, -3rem);
   background-color: #b1b2b4;
   color: #000;
@@ -548,7 +567,7 @@
 }
 
 .details-modal {
-  margin-top: 30px;
+  margin-top: 15px;
 }
 
 .social-modal {
@@ -1278,7 +1297,12 @@ tr.gridTable__service td:last-of-type {
 
   .f-cat {
     flex-direction: column;
+    align-items: center;
     gap: 30px;
+  }
+
+  .cat-content {
+    align-items: center;
   }
 
   .badge {
