--- a/join-us/style.css
+++ b/join-us/style.css
@@ -1546,6 +1546,12 @@ tr.gridTable__service td:last-of-type {
   .program-services li {
     font-size: 16px;
   }
+
+  /* Table */
+  .gridTable tr.plans-header th {
+    display: none;
+  }
+  
 }
 
 @media (max-width: 480px) {
