--- a/join-us/style.css
+++ b/join-us/style.css
@@ -2,6 +2,14 @@
   box-sizing: border-box;
 }
 
+/* Divi Settings */
+
+.et_pb_row_2 {
+  width: 60%;
+}
+
+/* ––––––––––––– */
+
 .cover-cta {
   display: flex;
   flex-direction: row;
@@ -678,7 +686,7 @@
   touch-action: manipulation;
   -moz-backface-visibility: hidden;
   padding: 10px;
-  cursor: grab;
+  cursor: default;
 }
 
 /* .owl-stage {
@@ -808,8 +816,8 @@
   border: 1px solid #f0f0f0;
   border-radius: 4px;
   background: #fff;
-  padding: 30px 20px;
-  height: 370px;
+  padding: 30px 20px 20px;
+  min-height: 264px;
 }
 
 .featured-carousel-logo:hover {
