Only feature members.

--- a/bin/templates/showcase/sitemap-html.hbs
+++ b/bin/templates/showcase/sitemap-html.hbs
@@ -63,7 +63,9 @@ li {
 <body>
 	<ul>
 	{{#each this}}
+        {{#if member}}
 		<li><a href="https://www.fiware.org{{social}}">{{organisationName}} - {{productName}}</a></li>
+        {{/if}}
     {{/each}}
 	</ul>
 </body>
