--- a/bin/templates/people/speaker-card.hbs
+++ b/bin/templates/people/speaker-card.hbs
@@ -1,26 +1,29 @@
 {{#each this}}
         <div id="item-{{@index}}"
-            class='grid-item {{#if bio}}cat-bio {{/if}}
+            class='grid-item
                 {{createClass company}}
                 {{createClass country}}
                 {{createClass department}}
                 {{createClasses filters}}
                 {{createClass domain}}'
-            {{#if bio}}
-            href="#item-{{@index}}"  
-            data-modal='{{@index}}'
-            {{/if}}
         >
             <div class='f-cat active'>
+                {{#if bio}}
+                <div class='cat-bio' data-modal='{{@index}}'>
+                {{/if}}
                  <div class='city-photo-container'>
                     <picture>
                        <source srcset="{{webp img}}" type="image/webp"/>
                        <img alt='' class='city-photo' src='{{img}}' loading='lazy' />
                     </picture>
                 </div>
+                {{#if bio}}
+                </div>
+                {{/if}}
                 <div class='profile-details'>
                     <h6 class='name'>{{title}}{{name}}</h6>
                     <h4 class='position'>{{job}}</h4>
+
                     <a target='_blank' href='{{website}}' rel='noopener'>
                         <h5 class='company-link'>{{company}}{{companyType}}</h5>
                     </a>
