--- a/bin/templates/sponsors/card.hbs
+++ b/bin/templates/sponsors/card.hbs
@@ -8,10 +8,10 @@
 >
     <div class='f-cat active'>
         <div class='city-photo-container'>
-            <picture>
-               <source srcset="{{webp img}}" type="image/webp"/>
+            <!--picture>
+               <source srcset="{{webp img}}" type="image/webp"/-->
                <img alt="" class="city-photo" src="{{img}}" loading="lazy" />
-            </picture>
+            <!--/picture-->
         </div>
         <div class='profile-details'>
             <h6 class='name'>{{name}}</h6>
