--- a/directories/sponsors/style.css
+++ b/directories/sponsors/style.css
@@ -377,11 +377,18 @@
     }
 }
 
+.city-photo-container {
+    width: 100%;
+    height: 0;
+    padding-top: 56%;
+    position: relative;
+}
+
 .city-photo {
-    /* border-radius: 100px;
-    width: 130px;
-    border: 3px solid #8ad2dc;
-    margin: 0 auto 10px auto;*/
+    margin: 0 auto 10px auto;
+    position:absolute;
+    top:0; 
+    left:0;
 }
 
 .flag {
