fgs speakers updates

--- a/bin/templates/people/speaker-card.hbs
+++ b/bin/templates/people/speaker-card.hbs
@@ -19,9 +19,7 @@
                 {{/if}}
                     <h6 class='name'>{{title}}{{name}}</h6>
                     <h4 class='position'>{{job}}</h4>
-                    <a target='_blank' href='{{website}}' rel='noopener'>
-                        <h5 class='company-link'>{{company}}{{companyType}}</h5>
-                    </a>
+                    <h5 class='company-link'><a target='_blank' href='{{website}}' rel='noopener'>{{company}}{{companyType}}</a></h5>
                 </div>
                 {{#if bio}}
                 </div>
