--- a/directories/people/speakers/style.css
+++ b/directories/people/speakers/style.css
@@ -50,7 +50,7 @@
     border-radius: 4px;
     padding: 20px 0 0;
     background: rgba(255, 255, 255, .15);
-    transition: all 300ms ease-in;
+    transition: all 300ms ease-in-out;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -241,7 +241,7 @@
 }
 
 .icons {
-    padding: 18px 0px 18px;
+    padding: 20px 0px;
     margin-top: 5px;
     border-top: 1px solid #ec5629;
     display: flex;
@@ -987,18 +987,19 @@
     .city-photo {
         width: 150px;
         /* margin-bottom: 30px; */
-        border: 3px solid #002e67;
+        border: 2px solid #000;
     }
 
     .f-cat {
         width: 100%;
-        padding: 30px 0px 15px;
+        /* padding: 30px 0px 15px; */
     }
 
     .f-cat:hover {
         /* box-shadow: 0 0 30px 0 rgba(255,255,255,0.2)!important; */
         transform: none;
         transition: none;
+        background-color: rgba(255, 255, 255, .15);
     }
 
 
